--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <div id="container">
+        <div id="title">WELCOME</div>
+        <div id="text">Selamat datang di Rain Village</div>
+        <div id="button">
+            <button id="button1">Toko</button>
+            <button id="button2">Latihan</button>
+            <button id="button3">Lawan Naga</button>
+        </div>
+        
+    </div>
     
 
 <script src="script.js"></script>
