--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
 <body>
 
     <div id="container">
+        <div id="header">
+            <div class="xp-player">XP: <span class='xp-player-text'></span></div>
+            <div class="health-player">Health: <span class='health-player-text'></span></div>
+            <div class="coin-player">Coin: <span class='coin-player-text'></span></div>
+        </div>
         <div id="title">WELCOME</div>
         <div id="text">Selamat datang di Rain Village</div>
         <div id="button">
             <button id="button1">Toko</button>
-            <button id="button2">Latihan</button>
+            <button id="button2">Goa</button>
             <button id="button3">Lawan Naga</button>
         </div>
         
