--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
 
     <div id="container">
         <div id="header">
-            <div class="xp-player">XP: <span class='xp-player-text'>50</span></div>
-            <div class="health-player">Health: <span class='health-player-text'>0</span></div>
-            <div class="coin-player">Coin: <span class='coin-player-text'>100</span></div>
+            <div class="player stat">
+                <div class="xp-player">XP: <span class='xp-player-text'>50</span></div>
+                <div class="health-player">Health: <span class='health-player-text'>400</span></div>
+                <div class="coin-player">Coin: <span class='coin-player-text'>100</span></div>
+            </div>
+            <div class="monster stat">
+                <div class="xp-monster">XP Monster: <span class='xp-monster-text'>0</span></div>
+                <div class="health-monster">Health Monster: <span class='health-monster-text'>0</span></div>
+            </div>
         </div>
         <div id="title">WELCOME</div>
         <div id="text">Selamat datang di Rain Village</div>
